# aws-certification-dop

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notes/: README.md
notes/aws_services/: CodeBuild.md  CodeCommit.md  CodeDeploy.md  CodePipeline.md
notes/ci_cd/: deployment_strategies.md
