[tool.poetry]
name = "aws-certification-dop"
version = "0.0.0"
description = "AWS Certified DevOps Engineer - Professional Notes & Labs"
authors = ["Kyle Finley <kyle@finley.sh>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
